fix footer horizontal scroll

--- a/bo.less
+++ b/bo.less
@@ -681,6 +681,8 @@ ul.lqt-thread-toolbar-commands {
 
 .footerwrap{
   	box-shadow: inset 0 3px 12px @footer-bg;
+  	overflow: hidden;
+  	width: 100%;
 }
 
 .smwofootergrid {
